<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/ic_drawer" />

    <group android:checkableBehavior="single" android:id="@+id/first_section">
        <item
            android:id="@+id/nav_chapters"
            android:icon="@drawable/ic_description_black_24dp"
            android:title="@string/nav_chapters" />

        <item
            android:id="@+id/nav_shloka_of_the_day"
            android:icon="@drawable/ic_description_black_24dp"
            android:title="@string/nav_shloka_of_the_day" />

        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_description_black_24dp"
            android:title="@string/nav_search" />

        <item
            android:id="@+id/nav_bookmark"
            android:icon="@drawable/ic_description_black_24dp"
            android:title="@string/nav_bookmark" />
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_description_black_24dp"
            android:title="@string/nav_notes" />
    </group>

    <group android:checkableBehavior="single" android:id="@+id/second_section">
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_description_black_24dp"
            android:title="@string/nav_share" />

        <item
            android:id="@+id/nav_images"
            android:icon="@drawable/ic_description_black_24dp"
            android:title="@string/nav_images" />

        <item
            android:id="@+id/nav_rate"
            android:title="@string/nav_rate" />
        <item
            android:id="@+id/nav_ads_free"
            android:title="@string/nav_ads_free" />
    </group>

    <group android:checkableBehavior="single" android:id="@+id/third_section">

            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_settings"
                android:title="@string/nav_settings" />
            <item
                android:id="@+id/nav_language"
                android:title="@string/nav_language" />
            <item
                android:id="@+id/nav_help"
                android:title="@string/nav_help" />

    </group>


</menu>